# cmake-imported-lib

./: CMakeLists.txt
include/mylib/: myheader.h
