cmake_minimum_required(VERSION 3.11)
project(MyLib)

add_library(MyLib STATIC IMPORTED)

set_target_properties(MyLib PROPERTIES
    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}something${CMAKE_STATIC_LIBRARY_SUFFIX}"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX}something${CMAKE_STATIC_LIBRARY_SUFFIX}"
    IMPORTED_CONFIGURATIONS "RELEASE;DEBUG"
)

target_include_directories(MyLib INTERFACE
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

add_library(MyLib::Static ALIAS MyLib)
